# diagrams-aws-asset-pack

./: .gitignore  .pylintrc  README.md  aws_icons_mapping.csv  generate_html.py  image_comparison.html  process_icons.sh  pyproject.toml
.amazonq/cli-agents/: python-diagrams.json
.amazonq/rules/: python-diagrams.md
.kiro/agents/: python-diagrams.json
.kiro/steering/: python-diagrams.md
examples/: aws.py  clustered_web_services.py  ec2_to_s3.py  ec2_to_s3_updated.py  event_processing_original.py  event_processing_updated.py
